Fix squished images on mobile

--- a/scss/superslides.scss
+++ b/scss/superslides.scss
@@ -16,7 +16,7 @@
         max-width: none;
         min-width: 100%;
         min-height: 100%;
-        position: absolute;
+        position: relative;
         left: 0;
         top: 0;
         &.keep-original {
